# HyzeIPUChip

./: CMakeLists.txt  HyzeMegaChipController.java  HyzeSecureController.java  HyzeServerlessController.java  JLCPCB Order Guide.txt  JLCPCB Order Instructions  README.md  build.zig  hyze_antivirus_scanner.cpp  hyze_confidential_enclave.rs  hyze_context_streamer.rs  hyze_framework_sandbox.java  hyze_graphql_secure_schema.graphqls  hyze_hardware_rot.sv  hyze_ipu_carrier.kicad_sch  hyze_ipu_dma_controller.sv  hyze_ipu_npu_core.v  hyze_ipu_safety_fsm.sv  hyze_ipu_sram.sv  hyze_ipu_weight_sram.sv  hyze_ipu_zig_driver.zig  hyze_istio_dp_policy.yaml  hyze_megachip_orchestrator.rs  hyze_megachip_test.bat  hyze_multimodal_runtime.rs  hyze_sbom_enforcer.rs  hyze_virus_remover.cpp  ipu_test.rs  pom.xml  test_hyze_ipu.v  wrangler.toml
src/: onnx_compiler.rs  worker.rs
